@startuml
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>

Table(users, "auth.users (Supabase)") {
    primary_key(id) : UUID
    email : VARCHAR
    last_login : TIMESTAMP
}

Table(user_uploads, "public.user_uploads") {
    primary_key(id) : UUID
    foreign_key(user_id) : UUID
    image_data : TEXT
    latitude : FLOAT
    longitude : FLOAT
    predicted_class : TEXT
    confidence : FLOAT
    created_at : TIMESTAMP
}

Table(user_stats, "public.user_stats") {
    primary_key(user_id) : UUID
    total_classified : INTEGER
    last_class : TEXT
    updated_at : TIMESTAMP
}

users "1" -- "0..*" user_uploads : uploads
users "1" -- "1" user_stats : belongs to
@enduml
